# aitelegrambot

./: .env.example  .envrc  .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  manifest.scm  pyproject.toml
docs/: README.md  commands.md  setup.md
src/aitelegrambot/: __main__.py  bot.py  commandhandlers.py  constants.py
